--- a/app/src/main/res/layout/activity_item_list.xml
+++ b/app/src/main/res/layout/activity_item_list.xml
@@ -56,7 +56,7 @@
             <ListView
                 android:id="@+id/ListViewProducts"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="195dp"
                 android:background="#AEDBF0" />
 
             <TextView
